--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/nav_all"
-        android:name="com.example.convidados.ui.home.HomeFragment"
+        android:name="com.example.convidados.ui.home.AllGuestsFragment"
         android:label="@string/menu_all_guests"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_presents"
-        android:name="com.example.convidados.ui.gallery.GalleryFragment"
+        android:name="com.example.convidados.ui.gallery.PresentFragment"
         android:label="@string/menu_present"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_absents"
-        android:name="com.example.convidados.ui.slideshow.SlideshowFragment"
+        android:name="com.example.convidados.ui.slideshow.AbsentFragment"
         android:label="@string/menu_absents"
         tools:layout="@layout/fragment_slideshow" />
 </navigation>
